Modified Scenario and Toolbox Design
Scenarios Nav and Tab Bar fixed color issue where sliding the table view changed its color

--- a/EPath-v0.0.1/Base.lproj/Main.storyboard
+++ b/EPath-v0.0.1/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <scene sceneID="0iR-2P-w9V">
             <objects>
                 <viewController id="jrf-ga-wXu" customClass="ScenariosViewController" customModule="EPath_v0_0_1" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="jab-ze-Yjk">
+                    <view key="view" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="jab-ze-Yjk">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -72,7 +72,8 @@
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="iFF-mM-1vj"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.86666666670000003" green="0.25098039220000001" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="tintColor" red="0.86666666670000003" green="0.25098039220000001" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="1Wk-g6-drT" firstAttribute="leading" secondItem="iFF-mM-1vj" secondAttribute="leading" id="8YT-bt-sld"/>
                             <constraint firstItem="iFF-mM-1vj" firstAttribute="bottom" secondItem="1Wk-g6-drT" secondAttribute="bottom" id="Jny-Pa-hLU"/>
@@ -142,7 +143,7 @@
                             </textView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="fY5-lb-KEk"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="5NQ-fX-48n" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="4ZR-TQ-J1V"/>
@@ -191,28 +192,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="Qoe-c2-2VE">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qoe-c2-2VE">
                                 <rect key="frame" x="16" y="141" width="361" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="361" id="D4a-Ev-bL8"/>
+                                    <constraint firstAttribute="height" constant="128" id="Moi-sV-RYV"/>
+                                </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="ux6-e7-ecl">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ux6-e7-ecl">
                                 <rect key="frame" x="16" y="568" width="361" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="x0f-oH-LVv"/>
+                                    <constraint firstAttribute="width" constant="361" id="yia-9o-drG"/>
+                                </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="15P-eN-I17">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="15P-eN-I17">
                                 <rect key="frame" x="16" y="362" width="361" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="KA1-O4-UVW"/>
+                                    <constraint firstAttribute="width" constant="361" id="yKb-ek-FPV"/>
+                                </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -221,6 +231,18 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="gTJ-ok-4ia"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="gTJ-ok-4ia" firstAttribute="trailing" secondItem="Qoe-c2-2VE" secondAttribute="trailing" constant="16" id="2JK-9L-EIi"/>
+                            <constraint firstItem="15P-eN-I17" firstAttribute="top" secondItem="Qoe-c2-2VE" secondAttribute="bottom" constant="93" id="Dtk-ND-Clz"/>
+                            <constraint firstItem="gTJ-ok-4ia" firstAttribute="bottom" secondItem="ux6-e7-ecl" secondAttribute="bottom" constant="73" id="JiW-S8-Jbx"/>
+                            <constraint firstItem="Qoe-c2-2VE" firstAttribute="leading" secondItem="gTJ-ok-4ia" secondAttribute="leading" constant="16" id="La8-ZT-pub"/>
+                            <constraint firstItem="ux6-e7-ecl" firstAttribute="leading" secondItem="gTJ-ok-4ia" secondAttribute="leading" constant="16" id="Ucb-Gk-jWZ"/>
+                            <constraint firstItem="Qoe-c2-2VE" firstAttribute="top" secondItem="gTJ-ok-4ia" secondAttribute="top" constant="38" id="Wo6-QD-8xY"/>
+                            <constraint firstItem="ux6-e7-ecl" firstAttribute="top" secondItem="15P-eN-I17" secondAttribute="bottom" constant="78" id="frH-BQ-2QU"/>
+                            <constraint firstItem="gTJ-ok-4ia" firstAttribute="trailing" secondItem="ux6-e7-ecl" secondAttribute="trailing" constant="16" id="m9P-5I-hZy"/>
+                            <constraint firstItem="gTJ-ok-4ia" firstAttribute="trailing" secondItem="15P-eN-I17" secondAttribute="trailing" constant="16" id="pKS-yZ-Rhr"/>
+                            <constraint firstItem="15P-eN-I17" firstAttribute="leading" secondItem="gTJ-ok-4ia" secondAttribute="leading" constant="16" id="yse-nc-h5B"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Facts" id="Ns3-6s-YDg"/>
                 </viewController>
@@ -253,7 +275,7 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mh9-q8-rTs">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" systemColor="systemBlueColor"/>
+                        <color key="backgroundColor" red="0.8666666666666667" green="0.25098039215686274" blue="0.14901960784313725" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="tintColor" systemColor="systemRedColor"/>
                         <color key="selectedImageTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -349,7 +371,7 @@
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="8YR-63-CJx"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.8666666666666667" green="0.25098039215686274" blue="0.14901960784313725" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="LjG-tg-Udo" firstAttribute="leading" secondItem="8YR-63-CJx" secondAttribute="leading" id="CT4-N6-VF1"/>
                             <constraint firstItem="8YR-63-CJx" firstAttribute="trailing" secondItem="LjG-tg-Udo" secondAttribute="trailing" id="E3t-ZH-TvA"/>
@@ -403,9 +425,6 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
